# auto-audio-device-selector

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PHASE_1_DETAILED_PLAN.md  PHASE_2_DETAILED_PLAN.md  README.md  TESTING_WORK_PLAN.md  build.rs  testing-resume.md
.claude/: settings.local.json
examples/: list_devices.rs  test_notifications.rs
scripts/: monitor-logs.sh  reload-config.sh  restart-service.sh
src/: lib.rs  main.rs  preference_debugging.rs
src/audio/: controller.rs  controller_v2.rs  device.rs  listener.rs  mod.rs  monitor.rs
src/config/: loader.rs  mod.rs  types.rs
src/logging/: mod.rs
src/notifications/: mod.rs
src/priority/: manager.rs  mod.rs
src/service/: daemon.rs  mod.rs  service_v2.rs  signals.rs
src/system/: adapters.rs  integration.rs  mocks.rs  mod.rs  traits.rs
tests/: config_loader_integration_tests.rs  config_tests.rs  device_controller_integration_tests.rs  device_matching_tests.rs  integration_dependency_injection_tests.rs  integration_pure_logic_tests.rs  notification_manager_tests.rs  priority_manager_tests.rs
tests/test_utils/: builders.rs  mod.rs
