[package]
name = "audio-device-monitor"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "macOS audio device monitor with priority-based automatic switching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/audio-device-monitor"
keywords = ["audio", "macos", "coreaudio", "device", "monitor"]
categories = ["multimedia::audio", "os::macos-apis"]

[dependencies]
# Audio-specific functionality
# coreaudio-sys = "0.2.11"  # Temporarily commented out due to edition2024 requirement
cpal = "0.15"

# System integration
core-foundation = "0.9"
core-foundation-sys = "0.2"

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# macOS-specific
libc = "0.2"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
# For linking with macOS frameworks
# Will be used to link against CoreAudio and CoreFoundation frameworks

[[bin]]
name = "audio-device-monitor"
path = "src/main.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[example]]
name = "test_notifications"
path = "examples/test_notifications.rs"
